==> u-blox/ubxlib/port/platform/zephyr/src/u_port_uart.c <==
# include "u_cfg_override.h" // For a customer's configuration override
#include <zephyr/types.h>
#include <zephyr.h>
#include <drivers/uart.h>
#include <device.h>
#include <soc.h>
#include "stddef.h"    // NULL, size_t etc.
#include "stdint.h"    // int32_t etc.
#include "stdbool.h"
#include "stdio.h"
#include "u_cfg_sw.h"
#include "u_cfg_hw_platform_specific.h"
#include "u_cfg_os_platform_specific.h" // For U_CFG_OS_YIELD_MS
#include "u_error_common.h"
#include "u_port_debug.h"
#include "u_port.h"
#include "u_port_os.h"
#include "u_port_event_queue.h"
#include "u_port_uart.h"
#include "version.h"
#include "string.h" // For memcpy()
#define U_PORT_UART_MAX_NUM 4

static void uartClose(int32_t handle)
{
    k_free(gUartData[handle].pBuffer);
    gUartData[handle].pBuffer = NULL;
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
    uart_irq_rx_disable(gUartData[handle].pDevice);
    uart_irq_tx_disable(gUartData[handle].pDevice);
#else
    k_timer_stop(&gUartData[handle].pollTimer);
#endif

    gUartData[handle].bufferRead = 0;
    gUartData[handle].bufferWrite = 0;
    gUartData[handle].bufferFull = false;
    gUartData[handle].eventQueueHandle = -1;
    gUartData[handle].eventFilter = 0;
    gUartData[handle].pEventCallback = NULL;
    gUartData[handle].pEventCallbackParam = NULL;
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
    gUartData[handle].pTxData = NULL;
    gUartData[handle].txWritten = 0;
#endif
}

int32_t uPortUartOpen(int32_t uart, int32_t baudRate,
                      void *pReceiveBuffer,
                      size_t receiveBufferSizeBytes,
                      int32_t pinTx, int32_t pinRx,
                      int32_t pinCts, int32_t pinRts)
{
    uErrorCode_t handleOrErrorCode = U_ERROR_COMMON_NOT_INITIALISED;

    // Note that the pins passed into this function must be set
    // to -1 since the Zephyr platform used on NRF53 does not
    // permit the pin assignments to be set at run-time, only at
    // compile-time.  To obtain the real values for your peripheral
    // pin assignments take a look at the macros U_CFG_TEST_PIN_UART_A_xxx_GET
    // (e.g. U_CFG_TEST_PIN_UART_A_TXD_GET) in the file
    // `u_cfg_test_plaform_specific.h` for this platform, which
    // demonstrate a mechanism for doing this.

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        if ((uart >= 0) &&
            (uart < sizeof(gUartData) / sizeof(gUartData[0])) &&
            (gUartData[uart].pDevice != NULL) &&
            (pReceiveBuffer == NULL) &&
            (gUartData[uart].pBuffer == NULL) &&
            (pinTx < 0) && (pinRx < 0) && (pinCts < 0) && (pinRts < 0)) {

            gUartData[uart].pBuffer = k_malloc(receiveBufferSizeBytes);

            if (gUartData[uart].pBuffer == NULL) {
                handleOrErrorCode = U_ERROR_COMMON_NO_MEMORY;
            } else {
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
                k_sem_init(&gUartData[uart].txSem, 0, 1);
                k_fifo_init(&gUartData[uart].fifoTxData);
                gUartData[uart].pTxData = NULL;
                gUartData[uart].txWritten = 0;
#endif
                gUartData[uart].receiveBufferSizeBytes = receiveBufferSizeBytes;
                gUartData[uart].bufferRead = 0;
                gUartData[uart].bufferWrite = 0;
                gUartData[uart].bufferFull = false;
                gUartData[uart].eventQueueHandle = -1;
                gUartData[uart].eventFilter = 0;
                gUartData[uart].pEventCallback = NULL;
                gUartData[uart].pEventCallbackParam = NULL;
                k_timer_init(&gUartData[uart].rxTimer, rxTimer, NULL);
                k_timer_user_data_set(&gUartData[uart].rxTimer, (void *)uart);

                uart_config_get(gUartData[uart].pDevice, &gUartData[uart].config);
                // Flow control is set in the .overlay file
                // by including the line:
                //     hw-flow-control;
                // in the definition of the relevant UART
                // so all we need to configure here is the
                // baud rate as everything else is good at the
                // default values (8N1).
                gUartData[uart].config.baudrate = baudRate;
                uart_configure(gUartData[uart].pDevice, &gUartData[uart].config);
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
                uart_irq_callback_user_data_set(gUartData[uart].pDevice, uartCb, NULL);
                uart_irq_rx_enable(gUartData[uart].pDevice);
#else
                k_timer_init(&gUartData[uart].pollTimer, pollTimer, NULL);
                k_timer_user_data_set(&gUartData[uart].pollTimer, (void *)uart);
                k_timer_start(&gUartData[uart].pollTimer, K_MSEC(1), K_MSEC(1));
#endif
                handleOrErrorCode = uart;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return (int32_t) handleOrErrorCode;
}

int32_t uPortUartRead(int32_t handle, void *pBuffer,
                      size_t sizeBytes)
{
    uErrorCode_t sizeOrErrorCode = U_ERROR_COMMON_NOT_INITIALISED;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        sizeOrErrorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        if ((pBuffer != NULL) && (sizeBytes > 0) && (handle >= 0) &&
            (handle < sizeof(gUartData) / sizeof(gUartData[0])) &&
            (gUartData[handle].pDevice != NULL)) {

            if (gUartData[handle].bufferWrite == gUartData[handle].bufferRead &&
                gUartData[handle].bufferFull == false) {
                sizeOrErrorCode = 0;
            } else {
                int32_t toRead = 0;
                if (gUartData[handle].bufferFull) {
                    sizeOrErrorCode = gUartData[handle].receiveBufferSizeBytes;
                } else {
                    sizeOrErrorCode = gUartData[handle].bufferWrite - gUartData[handle].bufferRead;

                    if (sizeOrErrorCode == 0) {
                        sizeOrErrorCode = gUartData[handle].receiveBufferSizeBytes;
                    } else if (sizeOrErrorCode < 0) {
                        sizeOrErrorCode = (gUartData[handle].receiveBufferSizeBytes - gUartData[handle].bufferRead) +
                                          gUartData[handle].bufferWrite;
                    }
                }

                if (sizeOrErrorCode > sizeBytes) {
                    sizeOrErrorCode = sizeBytes;
                }

                toRead = sizeOrErrorCode;

                uint32_t read = MIN(toRead, gUartData[handle].receiveBufferSizeBytes -
                                    gUartData[handle].bufferRead);
                memcpy(pBuffer, gUartData[handle].pBuffer + gUartData[handle].bufferRead, read);
                toRead -= read;
                gUartData[handle].bufferRead += read;
                gUartData[handle].bufferRead %= gUartData[handle].receiveBufferSizeBytes;

                if (toRead > 0) {
                    memcpy((char *)pBuffer + read, gUartData[handle].pBuffer, toRead);
                    gUartData[handle].bufferRead += toRead;
                }

                gUartData[handle].bufferFull = false;
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
                uart_irq_rx_enable(gUartData[handle].pDevice);
#endif
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return (int32_t) sizeOrErrorCode;
}

int32_t uPortUartWrite(int32_t handle, const void *pBuffer,
                       size_t sizeBytes)
{
    uErrorCode_t errorCode = U_ERROR_COMMON_NOT_INITIALISED;

    if (gMutex != NULL) {
        errorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        if ((pBuffer != NULL) && (sizeBytes > 0) && (handle >= 0) &&
            (handle < sizeof(gUartData) / sizeof(gUartData[0])) &&
            (gUartData[handle].pDevice != NULL)) {

            U_PORT_MUTEX_LOCK(gMutex);

            errorCode = sizeBytes;

            // Hint when debugging: if your code stops dead here
            // it is because the CTS line of this MCU's UART HW
            // is floating high, stopping the UART from
            // transmitting once its buffer is full: either
            // the thing at the other end doesn't want data sent to
            // it or the CTS pin when configuring this UART
            // was wrong and it's not connected to the right
            // thing.
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
            struct uartData_t data;
            data.handle = handle;
            data.pData = (void *)pBuffer;
            data.len = sizeBytes;

            k_fifo_put(&gUartData[handle].fifoTxData, &data);
            uart_irq_tx_enable(gUartData[handle].pDevice);
            // UART write is async to wait here to make this function synchronous
            k_sem_take(&gUartData[handle].txSem, K_FOREVER);
#else
            // When we have no interrupts we can block right here
            const unsigned char *pBufferUnsignedChar = (const unsigned char *) pBuffer;
            while (sizeBytes > 0) {
                uart_poll_out(gUartData[handle].pDevice, *pBufferUnsignedChar);
                pBufferUnsignedChar++;
                sizeBytes--;
            }
#endif
            U_PORT_MUTEX_UNLOCK(gMutex);
        }
    }

    return (int32_t) errorCode;
}

bool uPortUartIsRtsFlowControlEnabled(int32_t handle)
{
    bool rtsFlowControlIsEnabled = false;

    if ((gMutex != NULL) && (handle >= 0) &&
        (handle < sizeof(gUartData) / sizeof(gUartData[0])) &&
        (gUartData[handle].pDevice != NULL)) {

        U_PORT_MUTEX_LOCK(gMutex);
        if (gUartData[handle].config.flow_ctrl == UART_CFG_FLOW_CTRL_RTS_CTS) {
            rtsFlowControlIsEnabled = true;
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return rtsFlowControlIsEnabled;
}

bool uPortUartIsCtsFlowControlEnabled(int32_t handle)
{
    bool ctsFlowControlIsEnabled = false;

    if ((gMutex != NULL) && (handle >= 0) &&
        (handle < sizeof(gUartData) / sizeof(gUartData[0])) &&
        (gUartData[handle].pDevice != NULL)) {

        U_PORT_MUTEX_LOCK(gMutex);

        if (gUartData[handle].config.flow_ctrl == UART_CFG_FLOW_CTRL_RTS_CTS) {
            ctsFlowControlIsEnabled = true;
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return ctsFlowControlIsEnabled;
}
